# cmake_ceserver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  olddescription.md
src/: api.c  api.h  ceserver.c  ceserver.h  ceservertest.c  context.c  context.h  extensionfunctions.c  extensionfunctions.h  extensionloader.c  porthelp.c  symbols.c  symbols.h  threads.c  threads.h
src/ceserver/: CMakeLists.txt  api.c  api.h  ceserver.c  ceserver.h
src/ceserver/extension/: extensionfunctions.c  extensionfunctions.h  extensionloader.c  extensionloader.h
src/ceserver/selftest/: ceservertest.c
src/ceserver/utils/: context.c  porthelp.h  symbols.c  threads.c  threads.h
src/extension/: CMakeLists.txt
